--- a/Notebooks/mp3_to_txt_extraction.ipynb
+++ b/Notebooks/mp3_to_txt_extraction.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 72.1M/72.1M [00:07<00:00, 9.76MiB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import whisper\n",
     "import os\n",
@@ -13,26 +21,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\brikahrs\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\whisper\\transcribe.py:114: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
+      "C:\\Users\\brigh\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\whisper\\transcribe.py:114: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
       "  warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n"
      ]
     }
    ],
    "source": [
-    "for filename in os.listdir('Audio'):\n",
+    "# Get the parent directory\n",
+    "parent_directory = os.path.dirname(os.getcwd())\n",
+    "\n",
+    "# Specify the relative path to the 'Audio' folder and the 'Transcripts' folder\n",
+    "audio_folder_path = os.path.join(parent_directory, 'Audio')\n",
+    "transcripts_folder_path = os.path.join(parent_directory, 'Transcripts')\n",
+    "\n",
+    "# loop through and transcribe audio files in the Audio directory and place into the Transcripts directory\n",
+    "for filename in os.listdir(audio_folder_path):\n",
     "    if filename.endswith('.mp3'):\n",
+    "        mp3_file_path = os.path.join(audio_folder_path, filename)\n",
+    "        transcription = model.transcribe(mp3_file_path)\n",
     "\n",
-    "        file_path = os.path.join('Audio', filename)\n",
-    "        transcription = model.transcribe(file_path)\n",
+    "        transcription_file_path = os.path.join(transcripts_folder_path, filename.replace('.mp3', ''))\n",
     "\n",
-    "        with open(f'{filename}.txt', 'w') as f:\n",
+    "        with open(f'{transcription_file_path}.txt', 'w') as f:\n",
     "            f.write(transcription['text'])"
    ]
   }
